adds comparison to original MATLAB jPCA

--- a/workspace/convergence_plots.ipynb
+++ b/workspace/convergence_plots.ipynb
@@ -14,8 +14,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:12:55.872097Z",
-     "start_time": "2024-08-12T15:12:55.863880Z"
+     "end_time": "2024-08-12T17:23:23.308505Z",
+     "start_time": "2024-08-12T17:23:23.301197Z"
     },
     "collapsed": true
    },
@@ -28,6 +28,7 @@
     "from datasets import Leventhal24uDataset\n",
     "from picard import permute\n",
     "import sklearn\n",
+    "import matlab.engine\n",
     "\n",
     "rng = np.random.default_rng(0)\n"
    ]
@@ -38,14 +39,14 @@
    "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:12:55.907489Z",
-     "start_time": "2024-08-12T15:12:55.902513Z"
+     "end_time": "2024-08-12T17:23:23.401847Z",
+     "start_time": "2024-08-12T17:23:23.393353Z"
     }
    },
    "outputs": [],
    "source": [
     "plt.rc('lines', linewidth=2)\n",
-    "plt.rc('font', family='arial')\n"
+    "plt.rc('font', family='sans')\n"
    ]
   },
   {
@@ -62,15 +63,16 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:12:55.926814Z",
-     "start_time": "2024-08-12T15:12:55.918029Z"
+     "end_time": "2024-08-12T17:23:23.413184Z",
+     "start_time": "2024-08-12T17:23:23.405588Z"
     }
    },
    "outputs": [],
    "source": [
     "dt = 0.03 # seconds\n",
     "log_y = True\n",
-    "colors = [\"#F94B00\", \"#2FA194\", \"#903F65\"]"
+    "colors = [\"#F94B00\", \"#2FA194\", \"#EC3C8E\"]\n",
+    "common_ylim = [.008, 4] "
    ]
   },
   {
@@ -87,13 +89,54 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:12:56.231654Z",
-     "start_time": "2024-08-12T15:12:55.929339Z"
+     "end_time": "2024-08-12T17:23:23.425630Z",
+     "start_time": "2024-08-12T17:23:23.415202Z"
     }
    },
    "outputs": [],
    "source": [
-    "X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=500, n=8, stddev=1)\n",
+    "X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=500, n=6, stddev=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-12T17:23:29.012018Z",
+     "start_time": "2024-08-12T17:23:23.428202Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "eng = matlab.engine.start_matlab()\n",
+    "\n",
+    "params = dict(\n",
+    "meanSubtract=False,\n",
+    "normalize=False,\n",
+    "suppressBWrosettes=True,\n",
+    "suppressHistograms=True,\n",
+    "suppressText=True,\n",
+    ")\n",
+    "\n",
+    "proj, summary = eng.jPCA({'A':X}, [], params, nargout=2)\n",
+    "\n",
+    "offline_U = np.array(summary['jPCs_highD'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-12T17:23:29.394319Z",
+     "start_time": "2024-08-12T17:23:29.016965Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "jp = sjPCA(log_level=1)\n",
     "jp.offline_run_on(NumpyTimedDataSource(X, timepoints = np.arange(X.shape[0]) * dt))\n",
     "\n",
@@ -108,6 +151,9 @@
     "# ax.axhline(2 * np.pi/2, color='k', linestyle = '--')\n",
     "ax.set_xticks([0,5,10,15])\n",
     "\n",
+    "\n",
+    "offline_error = al.utils.principle_angles(offline_U[:,:2], true_variables['C']).sum()\n",
+    "\n",
     "if log_y:\n",
     "    ax.semilogy()\n",
     "    ax.set_yticks([1, .1, .01])\n",
@@ -115,13 +161,14 @@
     "else:\n",
     "    ax.set_yticks([0,1,2,3])\n",
     "ax.set_title(\"sjPCA error\")\n",
-    "ax.set_ylim([.01, 4])\n",
+    "ax.set_ylim(common_ylim)\n",
+    "ax.axhline(y=offline_error, linestyle='--', color='k')\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "source": [
     "## mmICA"
@@ -130,11 +177,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:12:57.084090Z",
-     "start_time": "2024-08-12T15:12:56.232232Z"
+     "end_time": "2024-08-12T17:23:30.156752Z",
+     "start_time": "2024-08-12T17:23:29.394960Z"
     }
    },
    "outputs": [],
@@ -144,16 +191,17 @@
     "m = 1_000 # number of blocks\n",
     "n = 6 # size of each block\n",
     "\n",
+    "# X = rng.normal(size=(m, n, n)); X[::2,:,:] += 10; X[1::2,:,:] -= 10;\n",
     "X = rng.laplace(size=(m, n, n))\n",
+    "\n",
     "input_data = NumpyTimedDataSource(X, timepoints = np.arange(m) * n * dt )\n",
     "\n",
-    "ica.offline_run_on(input_data);\n",
-    "\n",
+    "ica.offline_run_on(input_data)\n",
     "\n",
     "\n",
     "ts = []\n",
     "errors = []\n",
-    "for W, t in zip(ica.log['W'], ica.log['t'], strict=True):\n",
+    "for W, t in zip(ica.log['W'], ica.log['t']):\n",
     "    ts.append(t)\n",
     "    error = permute(W) - np.eye(W.shape[0])\n",
     "    errors.append(np.linalg.norm(error))\n",
@@ -177,14 +225,14 @@
     "    ax.set_yticks([0,1,2])\n",
     "\n",
     "ax.set_title(\"mmICA error\")\n",
-    "ax.set_ylim([.01, 4])\n",
+    "# ax.set_ylim(common_ylim)\n",
     "ax.axhline(offline_error, color='k', linestyle = '--')\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "source": [
     "## proSVD"
@@ -193,11 +241,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:12:57.181677Z",
-     "start_time": "2024-08-12T15:12:57.084611Z"
+     "end_time": "2024-08-12T17:23:30.276255Z",
+     "start_time": "2024-08-12T17:23:30.157885Z"
     }
    },
    "outputs": [],
@@ -230,14 +278,15 @@
     "    ax.set_yticks([0,.5])\n",
     "\n",
     "ax.set_title(\"proSVD error\")\n",
-    "ax.set_ylim([.01, 4])\n",
+    "ax.set_ylim(common_ylim)\n",
+    "ax.set_ylabel('error')\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "source": [
     "# Real data"
@@ -246,11 +295,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:12:57.603175Z",
-     "start_time": "2024-08-12T15:12:57.189450Z"
+     "end_time": "2024-08-12T17:23:30.292158Z",
+     "start_time": "2024-08-12T17:23:30.277001Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "raise Exception()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-12T17:23:30.293020Z",
+     "start_time": "2024-08-12T17:23:30.292879Z"
     }
    },
    "outputs": [],
@@ -262,11 +326,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "16",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:14:28.036645Z",
-     "start_time": "2024-08-12T15:12:57.604290Z"
+     "end_time": "2024-08-12T17:23:30.293524Z",
+     "start_time": "2024-08-12T17:23:30.293392Z"
     }
    },
    "outputs": [],
@@ -289,13 +353,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-12T15:14:28.039526Z",
-     "start_time": "2024-08-12T15:14:28.037165Z"
-    }
-   },
+   "id": "17",
+   "metadata": {},
    "outputs": [],
    "source": [
     "d.neural_data.t[-1]"
