--- a/workspace/convergence_plots.ipynb
+++ b/workspace/convergence_plots.ipynb
@@ -14,8 +14,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:23.308505Z",
-     "start_time": "2024-08-12T17:23:23.301197Z"
+     "end_time": "2024-08-12T20:56:12.604764Z",
+     "start_time": "2024-08-12T20:56:06.227206Z"
     },
     "collapsed": true
    },
@@ -29,29 +29,15 @@
     "from picard import permute\n",
     "import sklearn\n",
     "import matlab.engine\n",
+    "import scipy.stats as stats\n",
     "\n",
-    "rng = np.random.default_rng(0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:23.401847Z",
-     "start_time": "2024-08-12T17:23:23.393353Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.rc('lines', linewidth=2)\n",
-    "plt.rc('font', family='sans')\n"
+    "rng = np.random.default_rng(1)\n",
+    "eng = matlab.engine.start_matlab()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "source": [
     "# Simulated data"
@@ -60,19 +46,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:23.413184Z",
-     "start_time": "2024-08-12T17:23:23.405588Z"
+     "end_time": "2024-08-12T20:56:12.618923Z",
+     "start_time": "2024-08-12T20:56:12.610123Z"
     }
    },
    "outputs": [],
    "source": [
+    "plt.rc('lines', linewidth=2)\n",
+    "plt.rc('font', family='sans')\n",
+    "\n",
     "dt = 0.03 # seconds\n",
-    "log_y = True\n",
+    "T = 60 # seconds\n",
+    "iterations_to_run = 1000\n",
+    "\n",
     "colors = [\"#F94B00\", \"#2FA194\", \"#EC3C8E\"]\n",
-    "common_ylim = [.008, 4] "
+    "common_ylim = [.005, 4]\n",
+    "common_xticks = [0, 30, 60] \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-12T20:56:12.646696Z",
+     "start_time": "2024-08-12T20:56:12.622758Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def plot(offline_errors, trajectories, t, i, name):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig: plt.Figure\n",
+    "    lower = np.quantile(offline_errors, stats.norm(0,1).cdf(-1))\n",
+    "    upper = np.quantile(offline_errors, stats.norm(0,1).cdf(1))\n",
+    "    ax.axhline(np.quantile(offline_errors, .5), color='k', alpha=.75)\n",
+    "    ax.fill_between([t[0], t[-1]], upper, lower, color='k', edgecolor=None,  alpha=.25)\n",
+    "    ax.autoscale(False)\n",
+    "\n",
+    "    lower = np.quantile(trajectories, stats.norm(0,1).cdf(-1), axis=0)\n",
+    "    upper = np.quantile(trajectories, stats.norm(0,1).cdf(1), axis=0)\n",
+    "    trajectory = np.mean(trajectories, axis=0)\n",
+    "    ax.plot(t, trajectory, color=colors[i])\n",
+    "    ax.fill_between(t, upper, lower, color=colors[i], edgecolor=None,  alpha=.5)\n",
+    "\n",
+    "    ax.set_xlabel('time (s)')\n",
+    "    ax.set_ylabel('error')\n",
+    "    ax.set_xticks(common_xticks)\n",
+    "\n",
+    "    ax.semilogy()\n",
+    "    ax.set_yticks([1, .1, .01])\n",
+    "    ax.minorticks_off()\n",
+    "    ax.set_ylim(common_ylim)\n",
+    "    ax.set_xticks(common_xticks)\n",
+    "\n",
+    "    ax.set_title(f\"{name} error\")\n",
+    "    fig.savefig(f\"{al.CONFIG['plot_save_path']}/{name}.svg\")\n",
+    "\n",
+    "    return fig, ax"
    ]
   },
   {
@@ -89,86 +124,42 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:23.425630Z",
-     "start_time": "2024-08-12T17:23:23.415202Z"
+     "end_time": "2024-08-12T21:06:54.861647Z",
+     "start_time": "2024-08-12T20:56:12.650338Z"
     }
    },
    "outputs": [],
    "source": [
-    "X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=500, n=6, stddev=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:29.012018Z",
-     "start_time": "2024-08-12T17:23:23.428202Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "eng = matlab.engine.start_matlab()\n",
+    "trajectories = []\n",
+    "offline_errors = []\n",
+    "for _ in range(iterations_to_run):\n",
+    "    X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=int(T/dt), n=6, stddev=1)\n",
     "\n",
-    "params = dict(\n",
-    "meanSubtract=False,\n",
-    "normalize=False,\n",
-    "suppressBWrosettes=True,\n",
-    "suppressHistograms=True,\n",
-    "suppressText=True,\n",
-    ")\n",
+    "    # matlab section\n",
+    "    params = dict(\n",
+    "        meanSubtract=False,\n",
+    "        normalize=False,\n",
+    "        suppressBWrosettes=True,\n",
+    "        suppressHistograms=True,\n",
+    "        suppressText=True,\n",
+    "    )\n",
+    "    proj, summary = eng.jPCA({'A':X}, [], params, nargout=2)\n",
+    "    offline_U = np.array(summary['jPCs_highD'])\n",
+    "    offline_error = np.abs(al.utils.principle_angles(offline_U[:,:2], true_variables['C'])).sum()\n",
+    "    offline_errors.append(offline_error)\n",
     "\n",
-    "proj, summary = eng.jPCA({'A':X}, [], params, nargout=2)\n",
+    "    # my section\n",
+    "    jp = sjPCA(log_level=1)\n",
+    "    jp.offline_run_on(NumpyTimedDataSource(X, timepoints = np.arange(X.shape[0]) * dt))\n",
+    "    distances, t = jp.get_distance_from_subspace_over_time(true_variables['C'])\n",
+    "    trajectories.append(distances[:,0])\n",
     "\n",
-    "offline_U = np.array(summary['jPCs_highD'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:29.394319Z",
-     "start_time": "2024-08-12T17:23:29.016965Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "jp = sjPCA(log_level=1)\n",
-    "jp.offline_run_on(NumpyTimedDataSource(X, timepoints = np.arange(X.shape[0]) * dt))\n",
-    "\n",
-    "distances, t = jp.get_distance_from_subspace_over_time(true_variables['C'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(t, distances[:,0], color=colors[0])\n",
-    "ax.set_xlabel('time (s)')\n",
-    "ax.set_ylabel('error') # the error is the sum of (the absolute values of) the principal angles between the correct and discovered subspaces\n",
-    "# ax.axhline(2 * np.pi/2, color='k', linestyle = '--')\n",
-    "ax.set_xticks([0,5,10,15])\n",
-    "\n",
-    "\n",
-    "offline_error = al.utils.principle_angles(offline_U[:,:2], true_variables['C']).sum()\n",
-    "\n",
-    "if log_y:\n",
-    "    ax.semilogy()\n",
-    "    ax.set_yticks([1, .1, .01])\n",
-    "    ax.minorticks_off()\n",
-    "else:\n",
-    "    ax.set_yticks([0,1,2,3])\n",
-    "ax.set_title(\"sjPCA error\")\n",
-    "ax.set_ylim(common_ylim)\n",
-    "ax.axhline(y=offline_error, linestyle='--', color='k')\n",
-    "\n"
+    "fig, ax = plot(offline_errors, trajectories, t, 0, 'sjPCA')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "7",
    "metadata": {},
    "source": [
     "## mmICA"
@@ -177,62 +168,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:30.156752Z",
-     "start_time": "2024-08-12T17:23:29.394960Z"
+     "end_time": "2024-08-12T21:09:33.961626Z",
+     "start_time": "2024-08-12T21:06:54.862726Z"
     }
    },
    "outputs": [],
    "source": [
+    "trajectories = []\n",
+    "offline_errors = []\n",
+    "for _ in range(iterations_to_run):\n",
+    "    n = 6\n",
+    "    m = int((T/dt)//n) # number of blocks\n",
+    "    X = rng.laplace(size=(m, n, n))\n",
     "\n",
-    "ica = mmICA(alpha=.5, maxiter_cg=20, tol=1e-20, log_level=1)\n",
-    "m = 1_000 # number of blocks\n",
-    "n = 6 # size of each block\n",
+    "    ica = mmICA(alpha=.5, maxiter_cg=20, tol=1e-20, log_level=1)\n",
+    "    input_data = NumpyTimedDataSource(X, timepoints = np.arange(m) * n * dt )\n",
+    "    ica.offline_run_on(input_data)\n",
+    "    ts = []\n",
+    "    errors = []\n",
+    "    for W, t in zip(ica.log['W'], ica.log['t']):\n",
+    "        ts.append(t)\n",
+    "        error = permute(W) - np.eye(W.shape[0])\n",
+    "        errors.append(np.linalg.norm(error))\n",
+    "    t = np.squeeze(ts)\n",
+    "    trajectories.append(np.squeeze(errors))\n",
+    "    \n",
     "\n",
-    "# X = rng.normal(size=(m, n, n)); X[::2,:,:] += 10; X[1::2,:,:] -= 10;\n",
-    "X = rng.laplace(size=(m, n, n))\n",
     "\n",
-    "input_data = NumpyTimedDataSource(X, timepoints = np.arange(m) * n * dt )\n",
+    "    W = sklearn.decomposition.FastICA(max_iter=5000).fit(X.transpose([0,2,1]).reshape(-1,n)).components_\n",
+    "    offline_error = np.linalg.norm(permute(W) - np.eye(W.shape[0]))\n",
+    "    offline_errors.append(offline_error)\n",
     "\n",
-    "ica.offline_run_on(input_data)\n",
-    "\n",
-    "\n",
-    "ts = []\n",
-    "errors = []\n",
-    "for W, t in zip(ica.log['W'], ica.log['t']):\n",
-    "    ts.append(t)\n",
-    "    error = permute(W) - np.eye(W.shape[0])\n",
-    "    errors.append(np.linalg.norm(error))\n",
-    "ts = np.squeeze(ts)\n",
-    "errors = np.squeeze(errors)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(ts, errors, color=colors[1])\n",
-    "ax.set_xlabel('time (s)')\n",
-    "ax.set_ylabel('error')\n",
-    "ax.set_xticks([0,50,100,150])\n",
-    "\n",
-    "W = sklearn.decomposition.FastICA(max_iter=5000).fit(X.transpose([0,2,1]).reshape(-1,n)).components_\n",
-    "offline_error = np.linalg.norm(permute(W) - np.eye(W.shape[0]))\n",
-    "\n",
-    "if log_y:\n",
-    "    ax.semilogy()\n",
-    "    ax.set_yticks([1, .1, .01])\n",
-    "    ax.minorticks_off()\n",
-    "else:\n",
-    "    ax.set_yticks([0,1,2])\n",
-    "\n",
-    "ax.set_title(\"mmICA error\")\n",
-    "# ax.set_ylim(common_ylim)\n",
-    "ax.axhline(offline_error, color='k', linestyle = '--')\n",
-    "\n"
+    "fig, ax = plot(offline_errors, trajectories, t, 1, 'mmICA')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "9",
    "metadata": {},
    "source": [
     "## proSVD"
@@ -241,52 +216,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:30.276255Z",
-     "start_time": "2024-08-12T17:23:30.157885Z"
+     "end_time": "2024-08-12T21:12:43.087029Z",
+     "start_time": "2024-08-12T21:09:33.962426Z"
     }
    },
    "outputs": [],
    "source": [
-    "X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=500, n=8, stddev=1)\n",
-    "pro = proSVD(k=4, log_level=1)\n",
+    "trajectories = []\n",
+    "offline_errors = []\n",
+    "for _ in range(iterations_to_run):\n",
+    "    X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=int(T/dt), n=8, stddev=1)\n",
+    "    pro = proSVD(k=4, log_level=1)\n",
+    "    pro.offline_run_on(NumpyTimedDataSource(X, timepoints=np.arange(X.shape[0]) * dt))\n",
+    "    Q_error, t = pro.get_distance_from_subspace_over_time(true_variables['C'])\n",
+    "    trajectories.append(Q_error)\n",
     "\n",
-    "pro.offline_run_on(NumpyTimedDataSource(X, timepoints=np.arange(X.shape[0]) * dt))\n",
+    "    _, s, Vt = np.linalg.svd(X)\n",
+    "    V = Vt[np.argsort(s)[::-1], :].T[:,:pro.k]\n",
+    "    offline_error = np.abs(al.utils.principle_angles(V,true_variables['C'])).sum()\n",
+    "    offline_errors.append(offline_error)\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "Q_error, t = pro.get_distance_from_subspace_over_time(true_variables['C'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "ax.plot(t, Q_error, color=colors[2])\n",
-    "ax.set_xticks([0,5,10,15])\n",
-    "\n",
-    "_, s, Vt = np.linalg.svd(X)\n",
-    "V = Vt[np.argsort(s)[::-1], :].T[:,:pro.k]\n",
-    "offline_error = al.utils.principle_angles(V,true_variables['C']).sum()\n",
-    "ax.axhline(offline_error, color='k', linestyle = '--')\n",
-    "\n",
-    "\n",
-    "if log_y:\n",
-    "    ax.semilogy()\n",
-    "    ax.set_yticks([1, .1, .01])\n",
-    "    ax.minorticks_off()\n",
-    "else:\n",
-    "    ax.set_yticks([0,.5])\n",
-    "\n",
-    "ax.set_title(\"proSVD error\")\n",
-    "ax.set_ylim(common_ylim)\n",
-    "ax.set_ylabel('error')\n",
-    "\n",
-    "\n"
+    "fig, ax = plot(offline_errors, trajectories, t, 2, 'proSVD')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "11",
    "metadata": {},
    "source": [
     "# Real data"
@@ -295,11 +253,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:30.292158Z",
-     "start_time": "2024-08-12T17:23:30.277001Z"
+     "end_time": "2024-08-12T21:12:43.221005Z",
+     "start_time": "2024-08-12T21:12:43.087806Z"
     }
    },
    "outputs": [],
@@ -310,11 +268,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "13",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:30.293020Z",
-     "start_time": "2024-08-12T17:23:30.292879Z"
+     "end_time": "2024-08-12T21:12:43.221739Z",
+     "start_time": "2024-08-12T21:12:43.221689Z"
     }
    },
    "outputs": [],
@@ -326,13 +284,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-12T17:23:30.293524Z",
-     "start_time": "2024-08-12T17:23:30.293392Z"
-    }
-   },
+   "id": "14",
+   "metadata": {},
    "outputs": [],
    "source": [
     "jp = sjPCA(log_level=1)\n",
@@ -353,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
