changes to make more notebook tests pass

--- a/notebooks/dataset_plots.ipynb
+++ b/notebooks/dataset_plots.ipynb
@@ -30,6 +30,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1f1aee-c93a-4dac-af6a-baaf151f1d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "impo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "92b3506c-4e3f-4093-a058-5ad2803014a4",
    "metadata": {
