changes to make more notebook tests pass

--- a/workspace/leventhal_scratch.ipynb
+++ b/workspace/leventhal_scratch.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:16:04.913249Z",
-     "start_time": "2024-08-12T15:16:03.218177Z"
+     "end_time": "2024-08-13T18:07:05.599374Z",
+     "start_time": "2024-08-13T18:07:05.590940Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:16:05.053013Z",
-     "start_time": "2024-08-12T15:16:04.913973Z"
+     "end_time": "2024-08-13T18:07:05.881155Z",
+     "start_time": "2024-08-13T18:07:05.623811Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:16:05.057036Z",
-     "start_time": "2024-08-12T15:16:05.053447Z"
+     "end_time": "2024-08-13T18:07:05.885203Z",
+     "start_time": "2024-08-13T18:07:05.881820Z"
     }
    },
    "outputs": [],
@@ -55,42 +55,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = d.trial_data\n",
-    "\n",
-    "for column in ['timing', 'timestamps']:\n",
-    "    df = pd.concat([df.drop(column, axis=1), df[column].apply(pd.Series)], axis=1)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.trial_data['timing'].apply(pd.Series)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.trial_data['timing'][1]"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "3",
    "metadata": {},
    "source": [
     "* pretone is tone - centerIn\n",
@@ -101,11 +67,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
-   "metadata": {},
+   "id": "4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-13T18:07:06.710241Z",
+     "start_time": "2024-08-13T18:07:05.885711Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib inline\n",
     "plt.scatter(d.spike_times, d.spike_clusters, marker='|')\n",
     "for i, row in d.trial_data.iterrows():\n",
     "    if row['valid']:\n",
@@ -125,8 +96,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
-   "metadata": {},
+   "id": "5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-13T18:07:06.792283Z",
+     "start_time": "2024-08-13T18:07:06.711293Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -136,8 +112,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
-   "metadata": {},
+   "id": "6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-13T18:07:07.734833Z",
+     "start_time": "2024-08-13T18:07:06.792915Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -153,8 +134,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
-   "metadata": {},
+   "id": "7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-13T18:07:08.593771Z",
+     "start_time": "2024-08-13T18:07:07.735583Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -169,8 +155,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
-   "metadata": {},
+   "id": "8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-13T18:07:16.153080Z",
+     "start_time": "2024-08-13T18:07:08.594340Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = Leventhal24uDataset(bin_size=.1)\n",
@@ -186,11 +177,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
-   "metadata": {},
+   "id": "9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-13T18:07:16.585008Z",
+     "start_time": "2024-08-13T18:07:16.153976Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib inline\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "axes = (0,1,2)\n",
@@ -209,61 +205,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "import matplotlib.animation as animation\n",
-    "\n",
-    "# Fixing random state for reproducibility\n",
-    "np.random.seed(19680801)\n",
-    "\n",
-    "\n",
-    "def random_walk(num_steps, max_step=0.05):\n",
-    "    \"\"\"Return a 3D random walk as (num_steps, 3) array.\"\"\"\n",
-    "    start_pos = np.random.random(3)\n",
-    "    steps = np.random.uniform(-max_step, max_step, size=(num_steps, 3))\n",
-    "    walk = start_pos + np.cumsum(steps, axis=0)\n",
-    "    return walk\n",
-    "\n",
-    "\n",
-    "def update_lines(num, walks, lines):\n",
-    "    for line, walk in zip(lines, walks):\n",
-    "        line.set_data_3d(walk[:num, :].T)\n",
-    "    return lines\n",
-    "\n",
-    "\n",
-    "# Data: 40 random walks as (num_steps, 3) arrays\n",
-    "num_steps = 30\n",
-    "walks = [random_walk(num_steps) for index in range(40)]\n",
-    "\n",
-    "# Attaching 3D axis to the figure\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(projection=\"3d\")\n",
-    "\n",
-    "# Create lines initially without data\n",
-    "lines = [ax.plot([], [], [])[0] for _ in walks]\n",
-    "\n",
-    "# Setting the Axes properties\n",
-    "ax.set(xlim3d=(0, 1), xlabel='X')\n",
-    "ax.set(ylim3d=(0, 1), ylabel='Y')\n",
-    "ax.set(zlim3d=(0, 1), zlabel='Z')\n",
-    "\n",
-    "# Creating the Animation object\n",
-    "ani = animation.FuncAnimation(\n",
-    "    fig, update_lines, num_steps, fargs=(walks, lines), interval=100)\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
+   "id": "10",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-13T18:07:16.762984Z",
+     "start_time": "2024-08-13T18:07:16.588722Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -276,27 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.trial_data['Time'][43] - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.argmin(np.abs(d.neural_data.t - (d.trial_data['Time'][43] - 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
