--- a/workspace/convergence_plots.ipynb
+++ b/workspace/convergence_plots.ipynb
@@ -14,25 +14,25 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-13T17:59:10.038558Z",
-     "start_time": "2024-08-13T17:58:57.748730Z"
+     "end_time": "2024-08-15T13:22:52.067570Z",
+     "start_time": "2024-08-15T13:22:52.059682Z"
     },
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import adaptive_latents as al\n",
-    "from adaptive_latents import mmICA, sjPCA, proSVD, CenteringTransformer, Pipeline, NumpyTimedDataSource\n",
+    "from adaptive_latents import mmICA, sjPCA, proSVD, NumpyTimedDataSource, proPLS\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from datasets import Leventhal24uDataset\n",
     "from picard import permute\n",
     "import sklearn\n",
+    "import sklearn.cross_decomposition\n",
     "import matlab.engine\n",
     "import scipy.stats as stats\n",
+    "from adaptive_latents.utils import column_space_distance\n",
     "\n",
-    "rng = np.random.default_rng(1)\n",
-    "eng = matlab.engine.start_matlab()\n"
+    "rng = np.random.default_rng(1)"
    ]
   },
   {
@@ -49,8 +49,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-13T17:59:10.052356Z",
-     "start_time": "2024-08-13T17:59:10.042909Z"
+     "end_time": "2024-08-15T13:20:30.031005Z",
+     "start_time": "2024-08-15T13:20:30.022477Z"
     }
    },
    "outputs": [],
@@ -60,7 +60,8 @@
     "\n",
     "dt = 0.03 # seconds\n",
     "T = 60 # seconds\n",
-    "iterations_to_run = 10\n",
+    "iterations_to_run = 3\n",
+    "calculate_intra_run_errors = False\n",
     "\n",
     "colors = [\"#F94B00\", \"#2FA194\", \"#EC3C8E\"]\n",
     "common_ylim = [.005, 4]\n",
@@ -73,24 +74,33 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-13T17:59:10.079957Z",
-     "start_time": "2024-08-13T17:59:10.056662Z"
+     "end_time": "2024-08-15T13:20:31.535769Z",
+     "start_time": "2024-08-15T13:20:31.518609Z"
     }
    },
    "outputs": [],
    "source": [
-    "def plot(offline_errors, trajectories, t, i, name):\n",
+    "def plot(offline_errors, trajectories, t, i, name, offline_error_t=None):\n",
     "    fig, ax = plt.subplots()\n",
     "    fig: plt.Figure\n",
-    "    lower = np.quantile(offline_errors, stats.norm(0,1).cdf(-1))\n",
-    "    upper = np.quantile(offline_errors, stats.norm(0,1).cdf(1))\n",
-    "    ax.axhline(np.quantile(offline_errors, .5), color='k', alpha=.75)\n",
-    "    ax.fill_between([t[0], t[-1]], upper, lower, color='k', edgecolor=None,  alpha=.25)\n",
+    "    \n",
+    "    if not hasattr(offline_errors[0], \"__len__\"):\n",
+    "        lower = np.quantile(offline_errors, stats.norm(0,1).cdf(-1))\n",
+    "        upper = np.quantile(offline_errors, stats.norm(0,1).cdf(1))\n",
+    "        ax.axhline(np.quantile(offline_errors, .5), color='k', alpha=.75)\n",
+    "        ax.fill_between([t[0], t[-1]], upper, lower, color='k', edgecolor=None,  alpha=.25)\n",
+    "    else:\n",
+    "        lower = np.nanquantile(offline_errors, stats.norm(0,1).cdf(-1), axis=0)\n",
+    "        upper = np.nanquantile(offline_errors, stats.norm(0,1).cdf(1), axis=0)\n",
+    "        trajectory = np.nanmedian(offline_errors, axis=0)\n",
+    "        ax.plot(offline_error_t, trajectory, color='k', alpha=.75)\n",
+    "        ax.fill_between(offline_error_t, upper, lower,  color='k', edgecolor=None,  alpha=.25)\n",
+    "        \n",
     "    ax.autoscale(False)\n",
     "\n",
     "    lower = np.quantile(trajectories, stats.norm(0,1).cdf(-1), axis=0)\n",
     "    upper = np.quantile(trajectories, stats.norm(0,1).cdf(1), axis=0)\n",
-    "    trajectory = np.mean(trajectories, axis=0)\n",
+    "    trajectory = np.median(trajectories, axis=0)\n",
     "    ax.plot(t, trajectory, color=colors[i])\n",
     "    ax.fill_between(t, upper, lower, color=colors[i], edgecolor=None,  alpha=.5)\n",
     "\n",
@@ -124,12 +134,13 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-13T17:59:17.513424Z",
-     "start_time": "2024-08-13T17:59:10.083493Z"
+     "end_time": "2024-08-14T19:44:04.038604Z",
+     "start_time": "2024-08-14T19:43:56.538731Z"
     }
    },
    "outputs": [],
    "source": [
+    "eng = matlab.engine.start_matlab()\n",
     "trajectories = []\n",
     "offline_errors = []\n",
     "for _ in range(iterations_to_run):\n",
@@ -171,8 +182,8 @@
    "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-13T17:59:19.685427Z",
-     "start_time": "2024-08-13T17:59:17.514110Z"
+     "end_time": "2024-08-14T19:44:06.214874Z",
+     "start_time": "2024-08-14T19:44:04.039307Z"
     }
    },
    "outputs": [],
@@ -197,7 +208,9 @@
     "    trajectories.append(np.squeeze(errors))\n",
     "    \n",
     "\n",
-    "\n",
+    "    # intra_run_offline_errors = []\n",
+    "    # for i in range(X.shape[0]):\n",
+    "    #     pass\n",
     "    W = sklearn.decomposition.FastICA(max_iter=5000).fit(X.transpose([0,2,1]).reshape(-1,n)).components_\n",
     "    offline_error = np.linalg.norm(permute(W) - np.eye(W.shape[0]))\n",
     "    offline_errors.append(offline_error)\n",
@@ -219,8 +232,57 @@
    "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-13T17:59:21.645637Z",
-     "start_time": "2024-08-13T17:59:19.686168Z"
+     "end_time": "2024-08-15T13:20:42.690543Z",
+     "start_time": "2024-08-15T13:20:40.604791Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "trajectories = []\n",
+    "offline_errors = []\n",
+    "for _ in range(10):\n",
+    "    X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=int(T/dt), n=8, stddev=1)\n",
+    "    pro = proSVD(k=4, log_level=1)\n",
+    "    X_with_time = NumpyTimedDataSource(X, timepoints=np.arange(X.shape[0]) * dt)\n",
+    "    pro.offline_run_on(X_with_time)\n",
+    "    Q_error, t = pro.get_distance_from_subspace_over_time(true_variables['C'])\n",
+    "    trajectories.append(Q_error)\n",
+    "\n",
+    "\n",
+    "    if calculate_intra_run_errors:\n",
+    "        intra_run_offline_errors = []\n",
+    "        for i in range(X.shape[0]):\n",
+    "            _, s, Vt = np.linalg.svd(X[:i])\n",
+    "            V = Vt[np.argsort(s)[::-1], :].T[:,:pro.k]\n",
+    "            offline_error = column_space_distance(V, true_variables['C'])\n",
+    "            intra_run_offline_errors.append(offline_error)\n",
+    "        offline_errors.append(intra_run_offline_errors)\n",
+    "    else:\n",
+    "        _, s, Vt = np.linalg.svd(X)\n",
+    "        V = Vt[np.argsort(s)[::-1], :].T[:,:pro.k]\n",
+    "        offline_error = column_space_distance(V, true_variables['C'])\n",
+    "        offline_errors.append(offline_error)\n",
+    "        \n",
+    "\n",
+    "fig, ax = plot(offline_errors, trajectories, t, 2, 'proSVD', X_with_time.t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "## proPLS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-15T13:34:35.749114Z",
+     "start_time": "2024-08-15T13:34:34.661345Z"
     }
    },
    "outputs": [],
@@ -228,18 +290,50 @@
     "trajectories = []\n",
     "offline_errors = []\n",
     "for _ in range(iterations_to_run):\n",
-    "    X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=int(T/dt), n=8, stddev=1)\n",
-    "    pro = proSVD(k=4, log_level=1)\n",
-    "    pro.offline_run_on(NumpyTimedDataSource(X, timepoints=np.arange(X.shape[0]) * dt))\n",
-    "    Q_error, t = pro.get_distance_from_subspace_over_time(true_variables['C'])\n",
-    "    trajectories.append(Q_error)\n",
+    "    high_d = (10, 9)\n",
+    "    n_points = int(T/dt)\n",
+    "    common_d = 2\n",
     "\n",
-    "    _, s, Vt = np.linalg.svd(X)\n",
-    "    V = Vt[np.argsort(s)[::-1], :].T[:,:pro.k]\n",
-    "    offline_error = np.abs(al.utils.principle_angles(V,true_variables['C'])).sum()\n",
-    "    offline_errors.append(offline_error)\n",
+    "    X = rng.normal(size=(n_points, high_d[0]))\n",
+    "    Y = rng.normal(size=(n_points, high_d[1]))\n",
     "\n",
-    "fig, ax = plot(offline_errors, trajectories, t, 2, 'proSVD')"
+    "    snr = 100\n",
+    "    common = rng.normal(size=(n_points, common_d))\n",
+    "    Y[:,:common_d] = (snr * common + rng.normal(size=(n_points, common_d)))/np.sqrt(1 + snr**2)\n",
+    "    X[:,:common_d] = (snr * common + rng.normal(size=(n_points, common_d)))/np.sqrt(1 + snr**2)\n",
+    "    \n",
+    "    x_mixing_matrix = stats.special_ortho_group(dim=X.shape[1]).rvs()\n",
+    "    X = X @ x_mixing_matrix\n",
+    "    x_common_basis = np.eye(high_d[0])[:,:common_d]\n",
+    "    x_common_basis = x_mixing_matrix.T @ x_common_basis\n",
+    "    \n",
+    "    Y = Y @ stats.special_ortho_group(dim=Y.shape[1]).rvs()\n",
+    "    \n",
+    "    X_with_time = NumpyTimedDataSource(X, timepoints=np.arange(X.shape[0]) * dt)\n",
+    "    Y_with_time = NumpyTimedDataSource(Y, timepoints=np.arange(Y.shape[0]) * dt)\n",
+    "\n",
+    "\n",
+    "    pls = proPLS(k=3, log_level=1)\n",
+    "    output = pls.offline_run_on([X_with_time, Y_with_time])\n",
+    "    U_error, t = pls.get_distance_from_subspace_over_time(x_common_basis, variable='X')\n",
+    "    trajectories.append(U_error)\n",
+    "\n",
+    "    if calculate_intra_run_errors:\n",
+    "        intra_run_offline_errors = []\n",
+    "        for i in range(n_points):\n",
+    "            try:\n",
+    "                sk_weights = sklearn.cross_decomposition.PLSRegression(n_components=pls.k).fit(X[:i], Y[:i]).x_weights_\n",
+    "                intra_run_offline_errors.append(column_space_distance(sk_weights, x_common_basis))\n",
+    "            except:\n",
+    "                intra_run_offline_errors.append(np.nan)\n",
+    "        offline_errors.append(intra_run_offline_errors)\n",
+    "    else:\n",
+    "        sk_weights = sklearn.cross_decomposition.PLSRegression(n_components=pls.k).fit(X, Y).x_weights_\n",
+    "        offline_errors.append(column_space_distance(sk_weights, x_common_basis))\n",
+    "        \n",
+    "\n",
+    "\n",
+    "fig, ax = plot(offline_errors, trajectories, t, 2, 'proPLS', offline_error_t=X_with_time.t)\n"
    ]
   }
  ],
