adds an inverse_transform method to the API

--- a/notebooks/try_out_mmica.ipynb
+++ b/notebooks/try_out_mmica.ipynb
@@ -134,7 +134,7 @@
     "for block in A[start_index:]:\n",
     "    start = timeit.default_timer()\n",
     "    # pro.updateSVD(block.T)\n",
-    "    block = pro.project(block.T).T\n",
+    "    block = pro.project_down(block.T).T\n",
     "    block = block.T\n",
     "    pro_times.append(timeit.default_timer() - start)\n",
     "\n",
@@ -358,7 +358,7 @@
     "\n",
     "datasets = {}\n",
     "\n",
-    "dim_reduced_data = pro.project(A.reshape((-1, A.shape[-1])).T)\n",
+    "dim_reduced_data = pro.project_down(A.reshape((-1, A.shape[-1])).T)\n",
     "datasets['input'] = dim_reduced_data\n",
     "datasets['mmICA'] = ica.W @ dim_reduced_data\n",
     "\n",
@@ -657,7 +657,7 @@
     }
    },
    "source": [
-    "demixed_data = ica.W @ pro.project(A.reshape((-1, n_dimensions)).T)\n",
+    "demixed_data = ica.W @ pro.project_down(A.reshape((-1, n_dimensions)).T)\n",
     "statistics = ica.density.logp(demixed_data).mean(axis=1)\n",
     "plt.bar(x=np.arange(len(statistics)), height=statistics)"
    ],
