adds plots for the fish datasets

--- a/notebooks/dataset_plots.ipynb
+++ b/notebooks/dataset_plots.ipynb
@@ -322,10 +322,10 @@
     "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
     "        historical_observations, _ = br.input_ds.get_history()\n",
     "\n",
-    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
-    "        self.ax[0,1].set_title(f\"Step {step}\")\n",
-    "        al.plotting_functions.show_alpha(self.ax[0,0], br)\n",
-    "        al.plotting_functions.show_behavior(self.ax[0,2], br)\n",
+    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.axs[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
+    "        self.axs[0,1].set_title(f\"Step {step}\")\n",
+    "        al.plotting_functions.show_alpha(self.axs[0,0], br)\n",
+    "        al.plotting_functions.show_behavior(self.axs[0,2], br)\n",
     "        \n",
     "    def frame_draw_condition(self, step_number, bw):\n",
     "        condition = True\n",
@@ -414,10 +414,10 @@
     "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
     "        historical_observations, _ = br.obs_ds.get_history()\n",
     "\n",
-    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
-    "        self.ax[0,1].set_title(f\"Step {step}\")\n",
-    "        al.plotting_functions.show_alpha(self.ax[0,0], br)\n",
-    "        al.plotting_functions.show_behavior(self.ax[0,2], br)\n",
+    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.axs[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
+    "        self.axs[0,1].set_title(f\"Step {step}\")\n",
+    "        al.plotting_functions.show_alpha(self.axs[0,0], br)\n",
+    "        al.plotting_functions.show_behavior(self.axs[0,2], br)\n",
     "        \n",
     "    def frame_draw_condition(self, step_number, bw):\n",
     "        condition = True\n",
