adds plots for the fish datasets

--- a/notebooks/bubblewrap_demo.ipynb
+++ b/notebooks/bubblewrap_demo.ipynb
@@ -81,14 +81,14 @@
     "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
     "        historical_observations, _ = br.input_ds.get_history()\n",
     "\n",
-    "        al.plotting_functions.show_bubbles_2d(self.ax[0,0], historical_observations, bw, show_names=False, tail_length=5, no_bubbles=True)\n",
+    "        al.plotting_functions.show_bubbles_2d(self.axs[0,0], historical_observations, bw, show_names=False, tail_length=5, no_bubbles=True)\n",
     "        # al.plotting_functions.show_nstep_pdf(self.ax[0,1], br, self.ax[0,0], self.fig, offset=1, show_colorbar=False)\n",
     "        # al.plotting_functions.show_nstep_pdf(self.ax[0,2], br, self.ax[0,0], self.fig, hmm=hmm, method=\"hmm\", offset=1, show_colorbar=False)\n",
-    "        self.ax[0,0].set_title(\"data\")\n",
-    "        self.ax[0,2].set_title(\"1-step true prob.\")\n",
-    "        self.ax[0,1].set_title(\"1-step predicted prob.\")\n",
+    "        self.axs[0,0].set_title(\"data\")\n",
+    "        self.axs[0,2].set_title(\"1-step true prob.\")\n",
+    "        self.axs[0,1].set_title(\"1-step predicted prob.\")\n",
     "\n",
-    "        for ax in self.ax[0,:]:\n",
+    "        for ax in self.axs[0, :]:\n",
     "            ax.axis(\"off\")\n",
     "    \n",
     "    def frame_draw_condition(self, step_number, bw):\n",
@@ -140,14 +140,14 @@
     "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
     "        historical_observations, _ = br.input_ds.get_history()\n",
     "\n",
-    "        al.plotting_functions.show_bubbles_2d(self.ax[0,0], historical_observations, bw, show_names=False, tail_length=5)\n",
-    "        al.plotting_functions.show_nstep_pdf(self.ax[0,1], br, self.ax[0,0], self.fig, offset=1, show_colorbar=False)\n",
-    "        al.plotting_functions.show_nstep_pdf(self.ax[0,2], br, self.ax[0,0], self.fig, hmm=hmm, method=\"hmm\", offset=1, show_colorbar=False)\n",
-    "        self.ax[0,0].set_title(\"data and bubbles\")\n",
-    "        self.ax[0,2].set_title(\"1-step true prob.\")\n",
-    "        self.ax[0,1].set_title(\"1-step predicted prob.\")\n",
+    "        al.plotting_functions.show_bubbles_2d(self.axs[0,0], historical_observations, bw, show_names=False, tail_length=5)\n",
+    "        al.plotting_functions.show_nstep_pdf(self.axs[0,1], br, self.axs[0,0], self.fig, offset=1, show_colorbar=False)\n",
+    "        al.plotting_functions.show_nstep_pdf(self.axs[0,2], br, self.axs[0,0], self.fig, hmm=hmm, method=\"hmm\", offset=1, show_colorbar=False)\n",
+    "        self.axs[0,0].set_title(\"data and bubbles\")\n",
+    "        self.axs[0,2].set_title(\"1-step true prob.\")\n",
+    "        self.axs[0,1].set_title(\"1-step predicted prob.\")\n",
     "\n",
-    "        for ax in self.ax[0,:]:\n",
+    "        for ax in self.axs[0, :]:\n",
     "            ax.axis(\"off\")\n",
     "    \n",
     "    def frame_draw_condition(self, step_number, bw):\n",
