--- a/notebooks/dataset_plots.ipynb
+++ b/notebooks/dataset_plots.ipynb
@@ -396,10 +396,10 @@
     "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
     "        historical_observations, _ = br.input_ds.get_history()\n",
     "\n",
-    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
-    "        self.ax[0,1].set_title(f\"Step {step}\")\n",
-    "        al.plotting_functions.show_alpha(self.ax[0,0], br)\n",
-    "        al.plotting_functions.show_behavior(self.ax[0,2], br)\n",
+    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.axs[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
+    "        self.axs[0,1].set_title(f\"Step {step}\")\n",
+    "        al.plotting_functions.show_alpha(self.axs[0,0], br)\n",
+    "        al.plotting_functions.show_behavior(self.axs[0,2], br)\n",
     "        \n",
     "    def frame_draw_condition(self, step_number, bw):\n",
     "        condition = True\n",
@@ -425,10 +425,10 @@
      "evalue": "name 'al' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mal\u001b[49m\u001b[38;5;241m.\u001b[39mplotting_functions\u001b[38;5;241m.\u001b[39mcompare_metrics([br],\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'al' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mal\u001B[49m\u001B[38;5;241m.\u001B[39mplotting_functions\u001B[38;5;241m.\u001B[39mcompare_metrics([br],\u001B[38;5;241m1\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'al' is not defined"
      ]
     }
    ],
@@ -591,10 +591,10 @@
     "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
     "        historical_observations, _ = br.obs_ds.get_history()\n",
     "\n",
-    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
-    "        self.ax[0,1].set_title(f\"Step {step}\")\n",
-    "        al.plotting_functions.show_alpha(self.ax[0,0], br)\n",
-    "        al.plotting_functions.show_behavior(self.ax[0,2], br)\n",
+    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.axs[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
+    "        self.axs[0,1].set_title(f\"Step {step}\")\n",
+    "        al.plotting_functions.show_alpha(self.axs[0,0], br)\n",
+    "        al.plotting_functions.show_behavior(self.axs[0,2], br)\n",
     "        \n",
     "    def frame_draw_condition(self, step_number, bw):\n",
     "        condition = True\n",
